# 6cy

./: BENCHMARK.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Environmental_preparation.md  LICENSE  LICENSE-SPEC  README.md  SECURITY.md  security.md  security_profile.md  spec.md
.github/workflows/: build-and-release.yml
benches/: compression_bench.rs
plugin_abi/: sixcy_plugin.h
src/: archive.rs  block.rs  lib.rs  main.rs  perf.rs  plugin.rs  superblock.rs
src/codec/: mod.rs
src/crypto/: mod.rs
src/index/: mod.rs
src/io_stream/: mod.rs
src/recovery/: mod.rs  scanner.rs
tests/: integration_test.rs
