[package]
name = "sixcy"
version = "0.1.0"
edition = "2021"
description = "Reference implementation of the .6cy container format"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zstd = "0.13"
lz4_flex = "0.11"
crc32fast = "1.3"
uuid = { version = "1.6", features = ["v4"] }
clap = { version = "4.4", features = ["derive"] }
byteorder = "1.5"
chrono = "0.4"

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"
tempfile = "3.8"

[[bin]]
name = "6cy"
path = "src/main.rs"

[[bench]]
name = "compression_bench"
harness = false
