[package]
name        = "sixcy"
version     = "0.3.0"
edition     = "2021"
authors     = ["Cyh"]
description = "Reference implementation of the .6cy container format"
license     = "Apache-2.0"
repository  = "https://github.com/cyh/sixcy"
keywords    = ["compression", "archive", "lzma", "zstd", "encryption"]
categories  = ["compression", "encoding", "command-line-utilities"]

[dependencies]
thiserror  = "1.0"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zstd       = "0.13"
lz4_flex   = "0.11"
brotli     = "3.4"
lzma-rs    = "0.3"
aes-gcm    = { version = "0.10", features = ["getrandom"] }
argon2     = "0.5"
crc32fast  = "1.3"
uuid       = { version = "1.6", features = ["v4"] }
clap       = { version = "4.4", features = ["derive"] }
byteorder  = "1.5"
chrono     = "0.4"
blake3     = "1.5"
hex        = "0.4"

[dev-dependencies]
proptest   = "1.4"
criterion  = "0.5"
tempfile   = "3.8"

[[bin]]
name = "6cy"
path = "src/main.rs"

[[bench]]
name    = "compression_bench"
harness = false
